--- a/css/utilities.css
+++ b/css/utilities.css
@@ -34,7 +34,7 @@
 
 .btn-dark, .bg-dark {
     background: #333;
-    color: white;
+    color: #FFF;
  }
 
  .btn-light, .bg-light {
@@ -140,3 +140,34 @@
     max-width: 25%;
     padding: 0 4px;
 }
+/* CALLBACK FORM */
+
+.callback-form {
+    width: 100%;
+    padding: 20px 0;
+  }
+  
+  .callback-form label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .callback-form .form-control {
+    margin-bottom: 15px;
+  }
+  
+  .callback-form input {
+    width: 100%;
+    padding: 4px;
+    height: 40px;
+    border: #f5f5f5 1px solid;
+  }
+  
+  .callback-form input:focus {
+    outline-color: #28a745;
+  }
+  
+  .callback-form .btn {
+    padding: 12px 0;
+    margin-top: 20px;
+  }
